# EyeTracking

./: README.md
Eigenfaces-trial/: eigenfaces.py
SmartGaze-trial/: CMakeLists.txt  Readme.md
SmartGaze-trial/src/: CMakeLists.txt  ellipse.cpp  ellipse.h  ellipse2Poly.h  eyetracking.cpp  eyetracking.h  halideFuncs.cpp  halideFuncs.h  main.cpp  starburst.cpp  starburst.h
split/: data.csv  split.py
