find_path(LIBUVC_INCLUDE_DIR libuvc/libuvc.h)
find_library(LIBUVC_LIBRARY uvc)
find_path(LIBHALIDE_INCLUDE_DIR Halide.h)
find_library(LIBHALIDE_LIBRARY Halide)

include_directories(${LIBUVC_INCLUDE_DIR} ${LIBHALIDE_INCLUDE_DIR})
link_directories(/usr/local/lib)
add_executable( SmartGaze main.cpp eyetracking.cpp halideFuncs.cpp starburst.cpp svd.cpp ellipse.cpp)
set_property(TARGET SmartGaze PROPERTY CXX_STANDARD 11)
set_property(TARGET SmartGaze PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries( SmartGaze ${OpenCV_LIBS} ${LIBUVC_LIBRARY} ${LIBHALIDE_LIBRARY})
